--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -7,6 +7,7 @@
   <link href="../css/jca-ui-kit.min.css" rel="stylesheet">
   <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule="" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css"></i>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
   <div class="jca-layout d-none">
     <div class="jca-topbar">
       <div class="jca-logo">
-        <a href="/">
+        <a href="../index.html">
           <img src="../img/logo.svg" />
           JCA UI KIT
         </a>
@@ -457,26 +458,10 @@
     </div>
   </div>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
 
-<script type="text/javascript">
-  document.addEventListener("DOMContentLoaded", function (event) {
-    var loader = document.querySelector('.jca-loader');
-    var content = document.querySelector('.jca-layout');
-
-    setTimeout(function () {
-      loader.classList.add('d-none');
-      content.classList.remove('d-none');
-    }, 100);
-  });
-</script>
-
+<script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
+<script type="text/javascript" src="../js/popper.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../js/prism.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 </html>
