--- a/src/pages/tags.html
+++ b/src/pages/tags.html
@@ -16,7 +16,7 @@
     <div class="jca-layout d-none">
       <div class="jca-topbar">
         <div class="jca-logo">
-          <a href="/">
+          <a href="../index.html">
             <img src="../img/logo.svg" />
             JCA UI KIT
           </a>
@@ -126,68 +126,163 @@
         </div>
   
         <div class="jca-content">
-          <div class="containe">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="jca-page-header">
-                  <div class="jca-page-header__title">
-                    <ion-icon class="jca-page-header__icon" name="pricetags-outline"></ion-icon>
-                    Tags
-                  </div>
-                  <div class="jca-page-header__subtitle">A card full of tags</div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="jca-page-header">
+                <div class="jca-page-header__title">
+                  <ion-icon class="jca-page-header__icon" name="pricetags-outline"></ion-icon>
+                  Tags
                 </div>
+                <div class="jca-page-header__subtitle">A card full of tags</div>
               </div>
-            </div> 
-            <div class="row">
-              <div class="col-md-8">
-                <div class="jca-card-tags jca-card-tags--3-col m-b-20">
-                  <div class="jca-card-tags__items">
-                    <div class="jca-card-tags__item">
-                      # marketing
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="jca-code-reference">
+                <div class="jca-code-reference__example">
+                  <div class="jca-code-reference__description">
+                    A tag card is a grid of tags within a card. It can have 2 - 5 columns, by
+                    modifying the <span class="jca-keyword">jca-card-tags--[n]-col</span> class
+                  </div>
+                  <div class="jca-code-reference__visual">
+                    <h5>3 COL</h5>
+                    <div class="jca-card-tags jca-card-tags--3-col">
+                      <div class="jca-card-tags__items">
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing 101
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # ngành marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing online
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing strategy
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # social media marketing
+                        </div>   
+                      </div>
                     </div>
-                    <div class="jca-card-tags__item">
-                      # digital
+
+                    <h5>4 COL</h5>
+                    <div class="jca-card-tags jca-card-tags--4-col">
+                      <div class="jca-card-tags__items">
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing 101
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # ngành marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing online
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing strategy
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # social media marketing
+                        </div>   
+                      </div>
                     </div>
-                    <div class="jca-card-tags__item">
-                      # marketing
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing 101
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing digital
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # ngành marketing
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing online
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing strategy
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # social media marketing
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # nghề marketing
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing cơ bản
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing basics
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # online marketing
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # marketing career
-                    </div>
-                    <div class="jca-card-tags__item">
-                      # internet marketing
+
+                    <h5>5 COL</h5>
+                    <div class="jca-card-tags jca-card-tags--5-col">
+                      <div class="jca-card-tags__items">
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing 101
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing digital
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # ngành marketing
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing online
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # marketing strategy
+                        </div>
+                        <div class="jca-card-tags__item">
+                          # social media marketing
+                        </div>   
+                      </div>
                     </div>
                   </div>
+                </div>
+                <div class="jca-code-reference__code">
+                  <pre>
+                      <code class="language-html">
+&lt;div class="jca-card-tags jca-card-tags--3-col"&gt;
+  &lt;div class="jca-card-tags__items"&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # digital
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing 101
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing digital
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # ngành marketing
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing online
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # marketing strategy
+    &lt;/div&gt;
+    &lt;div class="jca-card-tags__item"&gt;
+      # social media marketing
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+                      </code>
+                    </pre>
                 </div>
               </div>
             </div>
@@ -196,31 +291,10 @@
       </div>
     </div>
   </body>
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous">
-  </script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous">
-  </script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous">
-  </script>
-  
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function(event) {
-      var loader = document.querySelector('.jca-loader');
-      var content = document.querySelector('.jca-layout');
 
-      setTimeout(function() {
-        loader.classList.add('d-none');
-        content.classList.remove('d-none');
-      }, 100);
-    });
-  </script>
+  <script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
+  <script type="text/javascript" src="../js/popper.min.js"></script>
+  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../js/prism.js"></script>
+  <script type="text/javascript" src="../js/main.js"></script>
 </html>
