Feature/code examples (#4)
* initial documentation and highlighting

* all code examples

* bump

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <div class="jca-landing-intro">
                   <div class="jca-landing-intro__logo">
                     <img src="./img/logo.svg" />
-                    JCA UI KIT <span>v0.0.3</span>
+                    JCA UI KIT <span>v0.0.4</span>
                   </div>
                   <div class="jca-landing-intro__text">
                     <h1>SIMPLE, CLEAN UI KIT FOR A VARIETY OF USE CASES</h1>
@@ -88,33 +88,10 @@
       </div>
     </div>
   </body>
-  <script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous">
-  </script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous">
-  </script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous">
-  </script>
-  
-  <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function(event) {
-      var loader = document.querySelector('.jca-loader');
-      var content = document.querySelector('.jca-layout');
 
-      setTimeout(function() {
-        loader.classList.add('d-none');
-        content.classList.remove('d-none');
-      }, 100);
-
-      new JParticles.particle('#demo');
-    });
-  </script>
+  <script type="text/javascript" src="./js/jquery-3.5.1.slim.min.js"></script>
+  <script type="text/javascript" src="./js/popper.min.js"></script>
+  <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./js/prism.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
 </html>
